# Spotify-Portfolio

./: .env.example  .gitignore  README.md  pyproject.toml
app/: dashboard.py  main.py
src/: api.py  auth.py  db.py  demo.py  enrich.py  ingest.py  pipeline.py  transform.py
tests/: conftest.py  test_transform.py
