[project]
name = "spotify-portfolio"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "spotipy>=2.24.0",
    "pandas>=2.2.0",
    "duckdb>=1.1.0",
    "streamlit>=1.40.0",
    "python-dotenv>=1.0.0",
    "plotly>=5.24.0",
    "scikit-learn>=1.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p no:cacheprovider"
